@@ -81,6 +81,7 @@ for detailed view of each issue, please consult http://issues.apache.org/jira/br
 - IMPROVEMENT: Change allownomd and skipbuildwithoutivy into a more semantically correct name (IVY-297)
 - IMPROVEMENT: Smarter determination if an expression is exact or not for RegexpPatternMatcher and GlobPatternMatcher
 
+- FIX: Maven scope defined in POM dependencyManagement section not honoured (IVY-811)
 - FIX: SFTPRepository incorrectly calculates last modified time for resources (IVY-815)
 - FIX: Filesystem resolver does not evaluate [branch] token when publishing (IVY-814)
 - FIX: Using ivy:settings with the "id" attribute not behaving as expected (IVY-809)
